<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/bg"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:paddingTop="5dp"
        android:text="@string/name_format"
        android:textColor="@color/textcolor"
        android:textSize="17sp"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rel_appname"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:padding="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/appname"
                    android:textColor="@color/textcolor"
                    android:textSize="15.5sp" />

                <CheckBox
                    android:id="@+id/check_appname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rel_pkgname"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:padding="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/pkgname"
                    android:textColor="@color/textcolor"
                    android:textSize="15.5sp" />

                <CheckBox
                    android:id="@+id/check_pkgname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rel_vername"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:padding="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/vername"
                    android:textColor="@color/textcolor"
                    android:textSize="15.5sp" />

                <CheckBox
                    android:id="@+id/check_vername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rel_vercode"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:padding="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/vercode"
                    android:textColor="@color/textcolor"
                    android:textSize="15.5sp" />

                <CheckBox
                    android:id="@+id/check_vercode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/scrollview"
        android:layout_alignParentRight="true"
        android:background="@color/bg"
        style="?android:attr/borderlessButtonStyle"
        android:text="@string/ok" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/scrollview"
        android:background="@color/bg"
        android:layout_toLeftOf="@id/btn_ok"
        style="?android:attr/borderlessButtonStyle"
        android:text="@string/cancel" />

</RelativeLayout>